--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "jenil goti",
   "license": "ISC",
@@ -15,7 +16,8 @@
     "ejs": "^3.1.8",
     "express": "^4.16.3",
     "lodash": "^4.17.21",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "nodemon": "^2.0.20"
   },
   "description": ""
 }
